<resources>
    <string name="app_name">Spirala4_16736</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_dodaj_kategoriju">Dodaj kategoriju</string>
    <string name="str_dodaj_knjigu">Dodaj knjigu</string>
    <string name="str_pretrazi">Pretrazi</string>
    <string name="str_autori">Autori</string>
    <string name="str_kategorije">Kategorije</string>
    <string name="str_odaberi_sliku">Odaberi sliku ..</string>
    <string name="str_ponisti">Ponisti</string>
    <string name="str_povratak">Povratak</string>
    <string name="str_upisi_knjigu">Upisi knjigu</string>
    <string name="str_hint_unesi_ime_autora">Unesi ime autora ..</string>
    <string name="str_hint_unesi_naziv_knjige">Unesi naziv knjige ..</string>
    <string name="str_toast_nema_knjiga">Nema knjiga u ovoj kategoriji!</string>
    <string name="str_toast_knjiga_uspjesno_dodana">Knjiga uspjesno dodana!</string>
    <string name="str_toast_unesi_naziv_autora_i_knjige">Morate unijeti naziv autora i knjige!</string>
    <string name="str_toast_tekst_pretrage">Morate unijeti tekst pretrage!</string>
    <string name="str_ex_nema_id">Nema id-a knjige*</string>
    <string name="str_ex_nema_naziva">Nema naziva knjige*</string>
    <string name="str_ex_nema_autora">Nema autora knjige*</string>
    <string name="str_ex_nema_opisa">Nema opisa knjige*</string>
    <string name="str_ex_nema_datuma">Nema datuma objave knjige*</string>
    <string name="str_hint_tekst_pretrage">Unesite tekst pretrage ..</string>
    <string name="str_dodaj_knjigu_online">Dodaj knjigu online</string>
    <string name="str_toast_servis_pokrenut">Servis pokrenut!</string>
    <string name="str_toast_greska">Greska!</string>
    <string name="str_toast_bez_pretrage">Morate prvo izvrsiti pretragu!</string>
    <string name="str_preporuci">Preporuci knjigu</string>
    <string name="str_posalji_mail">Posalji e-mail</string>
    <string name="str_toast_prazan_imenik">Nema kontakata u imeniku!</string>
    <string name="str_toast_no_email_app">Nema app za slanje e-maila!</string>

</resources>
