<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ba.unsa.etf.soma.spirala1_16736.ListeFragment">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dKategorije"
                android:layout_width="27dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="true"
                android:text="@string/str_kategorije" />

            <Button
                android:id="@+id/dAutori"
                android:layout_width="27dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_autori" />

        </LinearLayout>

        <Button
            android:id="@+id/dDodajOnline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_dodaj_knjigu_online" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/tekstPretraga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />

                <Button
                    android:id="@+id/dPretraga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_pretrazi" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/dDodajKategoriju"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_dodaj_kategoriju"
                    android:enabled="true" />

                <Button
                    android:id="@+id/dDodajKnjigu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_dodaj_knjigu" />
            </LinearLayout>

            <ListView
                android:id="@+id/listaKategorija"
                android:layout_width="match_parent"
                android:layout_height="287dp"
                android:layout_marginBottom="10dp" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>
