<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ba.unsa.etf.soma.spirala1_16736.DodavanjeKnjigeAkt">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/imeAutora"
            android:hint="Unesi ime autora .."
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <EditText
            android:id="@+id/nazivKnjige"
            android:hint="Unesi naziv knjige .."
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:id="@+id/naslovnaStr"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:src="@mipmap/ic_launcher" />

            <Button
                android:id="@+id/dNadjiSliku"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:text="@string/str_odaberi_sliku" />

        </LinearLayout>

        <Spinner
            android:id="@+id/sKategorijaKnjige"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dPonisti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_ponisti" />

            <Button
                android:id="@+id/dUpisiKnjigu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_upisi_knjigu" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
